# Simple3DViewer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readmi.texi
src/: CMakeLists.txt
src/app/: CMakeLists.txt  doubleslider.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  openglwidget.cpp  openglwidget.hpp  viewport.cpp  viewport.hpp
src/lib/: CMakeLists.txt
src/lib/include/: obj_viewer.h  owviewer.h
src/lib/include/obj_viewer/: details.h
src/lib/include/owviewer/: affine.h
src/lib/src/: main.c  main.cpp  parsing.c  processing.c  rotation.c  scale.c  translation.c  utils.c
src/lib/src/affine_transformations/: rotation.c  scaling.c  translation.c
src/lib/src/parsing/: external.h  parsing.c
src/lib/test/: faces_to_lines.cpp  time_test.cpp
src/lib/test/tests/: CMakeLists.txt
task/: README.md
